--- a/builder/code.tmpl
+++ b/builder/code.tmpl
@@ -19,6 +19,7 @@ import (
 
 type executionContext struct {
 	*graphql.OperationContext
+	*executableSchema
 }
 
 var sources = []*ast.Source{
@@ -31,7 +32,15 @@ var sources = []*ast.Source{
 
 var parsedSchema = gqlparser.MustLoadSchema(sources...)
 
-type executableSchema struct {}
+type executableSchema struct {
+	query *helloWorld.Query
+}
+
+func NewExecutableSchema(query *helloWorld.Query) graphql.ExecutableSchema {
+	return &executableSchema{
+		query,
+	}
+}
 
 func (e *executableSchema) Schema() *ast.Schema {
 	return parsedSchema
@@ -43,12 +52,12 @@ func (e *executableSchema) Complexity(typeName, field string, childComplexity in
 
 func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 	rc := graphql.GetOperationContext(ctx)
-	ec := executionContext{rc}
+	ec := executionContext{rc, e}
 
 	switch rc.Operation.Operation {
 	case ast.Query:
 		return func(ctx context.Context) *graphql.Response {
-			data := ec._Query(ctx, rc.Operation.SelectionSet)
+			data := ec._Query(ctx, rc.Operation.SelectionSet, e.Query)
 			var buf bytes.Buffer
 			data.MarshalGQL(&buf)
 
@@ -63,9 +72,9 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 }
 
 {{range $type := .Types}}
-	{{- if eq $type.Kind 3 -}}
+	{{- if eq $type.Kind "OBJECT" -}}
 		var {{$type.Name | lowerCaseFirst}}Implementors = []string{ {{$type.Name | quote}} }
-		func (ec *executionContext) _{{$type.Name}}(ctx context.Context, sel ast.SelectionSet, root {{$type.PackageName}}.{{$type.Name}}) graphql.Marshaler {
+		func (ec *executionContext) _{{$type.Name}}(ctx context.Context, sel ast.SelectionSet, obj *{{$type.PackageName}}.{{$type.Name}}) graphql.Marshaler {
 			fields := graphql.CollectFields(ec.OperationContext, sel, {{$type.Name | lowerCaseFirst}}Implementors)
 
 			ctx = graphql.WithFieldContext(ctx, &graphql.FieldContext{
@@ -73,35 +82,50 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 			})
 
 			out := graphql.NewFieldSet(fields)
-			var invalids uint32
 			for i, field := range fields {
 				switch field.Name {
 				{{- range $field := $type.Fields}}
 				case {{$field.Name | lowerCaseFirst | quote}}:
 					{{- if $field.IsMethod}}
 						field := field
-						{{if $field.HasArgs -}}
-							args := "" // TODO
-						{{- end}}
-						return root.({{typeGo $field.Type $root.Types}}).{{$field.Name}}(
-							{{- range $param := $field.Params}}
-								{{if eq $param.Name "args" -}}
-									args,
-								{{- else -}}
-									{{if eq $param.Name "ctx" -}}
-										ctx,
-									{{- else -}}
-										di.{{index $root.DependenciesNameMap $param.Name | upperCaseFirst}},
-									{{- end -}}
-								{{- end -}}
-							{{- end}}
-						){{- if not $field.HasError -}}, nil{{- end}}
+						out.Concurrently(i, func() graphql.Marshaler {
+							return ec._{{$type.Name}}_{{$field.Name}}(ctx, field, obj)
+						})
+
 					{{else}}
-						out.Values[i] = {{$field.Type | typeMarshalerMethodName}}(root.({{typeGo $field.Type $root.Types}}).{{$field.Name}})
+						out.Values[i] = {{$field.Type | typeMarshalerMethodName}}(obj.{{$field.Name}})
 					{{- end -}}
 				{{- end -}}
 				}
 			}
+			out.Dispatch()
+			return out
 		}
+		{{range $field := $type.Fields}}
+			func (ec *executionContext) _{{$type.Name}}_{{$field.Name}}(ctx context.Context, field graphql.CollectedField, obj *{{$type.PackageName}}.{{$type.Name}}) graphql.Marshaler {
+				fc := &graphql.FieldContext{
+					Object:   {{$type.Name | quote}},
+					Field:    field,
+					Args:     nil,
+					IsMethod: true,
+				}
+				_ctx = graphql.WithFieldContext(ctx, fc)
+				// TODO args
+				res := obj.{{$field.Name}}(
+					{{- range $param := $field.Params}}
+						{{if eq $param.Name "args" -}}
+							args,
+						{{- else -}}
+							{{if eq $param.Name "ctx" -}}
+								_ctx,
+							{{- else -}}
+								ec.di.{{index $root.DependenciesNameMap $param.Name | upperCaseFirst}},
+							{{- end -}}
+						{{- end -}}
+					{{- end}}
+				)
+				return graphql.MarshalString(res)
+			}
+		{{- end -}}
 	{{end}}
 {{end}}
