--- a/builder/template/code.tmpl
+++ b/builder/template/code.tmpl
@@ -135,7 +135,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 							args,
 						{{- else -}}
 							{{if eq $param.Name "ctx" -}}
-								_ctx,
+								ctx,
 							{{- else -}}
 								ec.di.{{index $root.DependenciesNameMap $param.Name | upperCaseFirst}},
 							{{- end -}}
