--- a/builder/template/code.tmpl
+++ b/builder/template/code.tmpl
@@ -109,7 +109,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 							return ec._{{$type.Name}}_{{$field.Name}}(ctx, field, obj)
 						})
 					{{- else -}}
-						out.Values[i] = {{$field.Type | typeMarshalerMethodName}}(obj.{{$field.Name}})
+						out.Values[i] = ec._{{$type.Name}}_{{$field.Name}}(ctx, field, obj)
 					{{- end -}}
 				{{- end -}}
 				}
@@ -117,6 +117,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 			out.Dispatch()
 			return out
 		}
+
 		{{range $field := $type.Fields}}
 			func (ec *executionContext) _{{$type.Name}}_{{$field.Name}}(ctx context.Context, field graphql.CollectedField, obj *{{$type.PackageName}}.{{$type.Name}}) graphql.Marshaler {
 				fc := &graphql.FieldContext{
@@ -131,7 +132,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 
 				resTmp, err := ec.ResolverMiddleware(ctx, func(rctx context.Context) (interface{}, error) {
 					ctx = rctx // use context from middleware stack in children
-					return obj.{{$field.Name}}(
+					return obj.{{$field.Name}}{{if $field.IsMethod}} (
 						{{- range $param := $field.Params}}
 							{{if eq $param.Name "args" -}}
 								args,
@@ -141,7 +142,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 								ec.di.{{index $root.DependenciesNameMap $param.Name | upperCaseFirst}},
 							{{- end -}}
 						{{- end}}
-					){{- if not $field.HasError -}}, nil{{- end}}
+					){{end}}{{- if not $field.HasError -}}, nil{{- end}}
 				})
 
 				if err != nil {
@@ -158,7 +159,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 
 				return ec.{{$field.Type | typeMarshalerMethodName}}(ctx, field.Selections, res)
 			}
-		{{- end -}}
+		{{end -}}
 	{{end}}
 {{end}}
 
@@ -173,8 +174,7 @@ func (e *executableSchema) Exec(ctx context.Context) graphql.ResponseHandler {
 				return graphql.Null
 			}
 			{{ if eq $type.Kind "OBJECT" -}}
-				// TODO
-				return graphql.Null
+				return ec._{{$type.Name}}(ctx, sel, v)
 			{{- else if eq $type.Kind "LIST" -}}
 				arr := *v
 				ret := make(graphql.Array, len(arr))
